// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Course Run Submit Button default parameters 1`] = `
<ActionButton
  className=""
  disabled={false}
  labels={
    Object {
      "default": "Submit Run for Review",
      "pending": "Submitting Run for Review",
    }
  }
  onClick={[Function]}
  primary={true}
  state="default"
/>
`;

exports[`Course Run Submit Button disabled 1`] = `
<ActionButton
  className=""
  disabled={true}
  labels={
    Object {
      "default": "Submit Run for Review",
      "pending": "Submitting Run for Review",
    }
  }
  onClick={[Function]}
  primary={true}
  state="default"
/>
`;

exports[`Course Run Submit Button internal review 1`] = `
<ActionButton
  className=""
  disabled={false}
  labels={
    Object {
      "default": "PC Review Complete",
      "pending": "Submitting Run for Review",
    }
  }
  onClick={[Function]}
  primary={true}
  state="default"
/>
`;

exports[`Course Run Submit Button legal review 1`] = `
<ActionButton
  className=""
  disabled={false}
  labels={
    Object {
      "default": "Save & Send to PC Review",
      "pending": "Submitting Run for Review",
    }
  }
  onClick={[Function]}
  primary={true}
  state="default"
/>
`;

exports[`Course Run Submit Button reviewed with exempt changes 1`] = `
<ActionButton
  className=""
  disabled={false}
  labels={
    Object {
      "default": "Update Run",
      "pending": "Submitting Run for Review",
    }
  }
  onClick={[Function]}
  primary={true}
  state="default"
/>
`;

exports[`Course Run Submit Button reviewed without exempt changes 1`] = `
<ActionButton
  className=""
  disabled={false}
  labels={
    Object {
      "default": "Re-Submit Run for Review",
      "pending": "Submitting Run for Review",
    }
  }
  onClick={[Function]}
  primary={true}
  state="default"
/>
`;

exports[`Course Run Submit Button submitting 1`] = `
<ActionButton
  className=""
  disabled={false}
  labels={
    Object {
      "default": "Submit Run for Review",
      "pending": "Submitting Run for Review",
    }
  }
  onClick={[Function]}
  primary={true}
  state="pending"
/>
`;
